# sphinx-rtd-example

./: .gitignore  .readthedocs.yaml  pyproject.toml
calculator/: __init__.py  advanced.py  operations.py
docs/source/: calculator.advanced.rst  calculator.operations.rst  conf.py  index.rst  modules.rst  usage.rst
